# fundus-odmac-toolkit

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
notebooks/: idrid_eval.ipynb  riga_magrabia_eval.ipynb  riga_messidor_eval.ipynb  test_models.ipynb
scripts/: train.py
src/fundus_odmac_toolkit/models/: hf_hub.py  segmentation.py
src/fundus_odmac_toolkit/training/: data_factory.py  pl_module.py
